--- a/style.css
+++ b/style.css
@@ -664,4 +664,8 @@ body {
   .submission .template-links a:hover {
     text-decoration: underline;
   }
-  
+  .divider {
+    border-top: 1px solid #ccc;
+    margin: 5px 0;
+    list-style: none;
+  }
